--- a/project-copy-mahim/index-style.css
+++ b/project-copy-mahim/index-style.css
@@ -50,7 +50,7 @@ display: flex;
 justify-content: space-around;
 height: 100vh;
 align-items: center;
-background-image: url(images/background.png),linear-gradient(135deg,rgb(173, 169, 169),rgb(75, 80, 69));
+background-image: url(images/background.png),linear-gradient(135deg,rgb(173, 169, 169),rgba(62, 49, 11, 0.836));
 }
 .banner-description{
 color: black;
@@ -133,7 +133,11 @@ margin-left: 3px;
     border-radius: 10px;
     box-shadow: 0px 0px 60px rgb(173, 173, 173);
 }
-
+.box2:hover{
+    transform: rotate(2deg) ;
+    
+    border: 1px solid goldenrod;
+}
 .btn2{
     border: none;
     background-color: transparent;
@@ -150,10 +154,12 @@ footer{
     background-image: linear-gradient(rgb(206, 206, 206),rgb(55, 54, 54));
 }
 #bottom{
+    padding-top: 100px;
+    padding-bottom: 100px;
     display: flex;
-    align-items: center;
+    /* align-items: center; */
     justify-content: space-around;
-    height:60vh;
+    /* height:60vh; */
 }
 .footer-link{
     text-decoration: none;
